Update Quarkus framework to version 3.33.1.1 to address Authentication/Authorization bypass CVE
Remove outdated dependency pins

Improved responsiveness during data load across multiple admin views

Replace wrappers with primitive types across Entities

Add @Transactional annotation to multiple ExerciseService methods

Various Fixes

Refactor ExerciseEntity and AiInteractionEntity to use primitive types for all boolean fields

Refactor validation constraints in UserRankDto and UserSettingsDto to use AppConstants